# Code2College

./: .gitignore  README.md
Portfolix/: .env.example  README.md  generate.py  requirements.txt
Portfolix/portfolix/: __init__.py  ai_enhancer.py  builder.py  github_client.py
Portfolix/site/: app.js  background.js  docs.js  index.html  styles.css
Portfolix/templates/: cv.html.j2  portfolio.html.j2
dirdelta/: README.md  pyproject.toml
dirdelta/c2c/: AI_Interaction_Log.md
dirdelta/src/dirdelta/: __init__.py  __main__.py  cli.py  comparator.py  hashing.py  ignore.py  models.py  reporter.py  scanner.py  textdiff.py
dirdelta/tests/: conftest.py  test_cli.py  test_comparator.py  test_hashing.py  test_ignore.py  test_models.py  test_reporter.py  test_scanner.py  test_textdiff.py
hirewheel_scraper/: .gitignore  README.md  requirements.txt
hirewheel_scraper/hwscraper/: __init__.py  app.py  config.py  diff.py  login.py  models.py  pipeline.py  scheduler.py  session.py  store.py  ui.py
hirewheel_scraper/hwscraper/extractors/: __init__.py  _common.py  college_pathways.py  internship_prep.py  learning_modules.py  marketplace.py  meetings.py  my_projects.py  news.py  notifications.py  program.py  special_events.py  surveys.py
hirewheel_scraper/tests/: test_extractors.py  test_notifications.py  test_pipeline.py
mathexplained-discord-bot/: README.md  bot.py  duelstats.py  math_render.py  moderation.py  problems.py  requirements.txt
mp3d/: game.html
runtime_escape/: game.html
sunrise_cafe_website/: index.html  script.js  styles.css
(+1 files in other folders)
